# Advanced_SDK

./: pyproject.toml
mlartifacts/434800663312864488/traces/12f3385da01f463c8a94fc1ee4811aae/artifacts/: traces.json
mlartifacts/434800663312864488/traces/793ad1729b1e4c699fc831af6aeee173/artifacts/: traces.json
mlartifacts/434800663312864488/traces/b212d1eda6f243e8b014ba13824b078a/artifacts/: traces.json
mlartifacts/434800663312864488/traces/b8d11a8da479427c8d4f6d347ceb05ee/artifacts/: traces.json
mlartifacts/434800663312864488/traces/d3fc74ff3ffc49bbb157963c9ba98302/artifacts/: traces.json
mlruns/0/: meta.yaml
mlruns/434800663312864488/: meta.yaml
mlruns/434800663312864488/traces/12f3385da01f463c8a94fc1ee4811aae/: trace_info.yaml
mlruns/434800663312864488/traces/793ad1729b1e4c699fc831af6aeee173/: trace_info.yaml
mlruns/434800663312864488/traces/b212d1eda6f243e8b014ba13824b078a/: trace_info.yaml
mlruns/434800663312864488/traces/b8d11a8da479427c8d4f6d347ceb05ee/: trace_info.yaml
mlruns/434800663312864488/traces/d3fc74ff3ffc49bbb157963c9ba98302/: trace_info.yaml
mlruns/434800663312864488/traces/dd862eab3ee74d35a302d0be629a806f/: trace_info.yaml
mlruns/434800663312864488/traces/ea347954e9f44f29a20abec5283f8bb3/: trace_info.yaml
mlruns/434800663312864488/traces/ef78508e410942c6a8f64af497f86fb6/: trace_info.yaml
mlruns/434800663312864488/traces/f2ae16afcb644b69af2e7ddb46d7778b/: trace_info.yaml
src/advanced_sdk/: __init__.py  handoffs.py  runner.py
src/advanced_sdk/Patterns/: process_delegate.py
(+32 files in other folders)
